chore: clean MessagePresenters